fix: history overflow

--- a/src/components/file-browser-container/file-browser-container-core.scss
+++ b/src/components/file-browser-container/file-browser-container-core.scss
@@ -8,7 +8,6 @@
 }
 
 .file-browser-container-no-sidebar {
-	display: grid;
 	position: absolute;
 	height: 100%;
 	width: 100%;
